# Justly

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .~lock.instruments.csv#  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  LICENSE.md  README.md  gcov-for-clang.sh  generate_coverage.sh  install.sh  instruments.csv  map.imp  song_schema.json  test.jl  test.sh  vcpkg-configuration.json  vcpkg.json
executable/: CMakeLists.txt  Justly.cpp
src/: CMakeLists.txt  CellChange.cpp  CellChange.h  Cells.hpp  Chord.cpp  Chord.h  Chord.hpp  ChordsDelegate.cpp  ChordsDelegate.h  ChordsModel.cpp  ChordsModel.h  ChordsModel.hpp  ChordsTable.hpp  ChordsView.cpp  ChordsView.h  ComboBoxDelegate.cpp  ComboBoxDelegate.h  ComboBoxItemDelegate.cpp  ComboBoxItemDelegate.h  ControlsColumn.hpp  CsoundData.cpp  CsoundData.h  CsoundSession.cpp  CsoundSession.h  DefaultInstrument.cpp  DefaultInstrument.h  DeleteCells.hpp  EditMenu.hpp  Editor.cpp  Editor.h  FileMenu.hpp  InsertEmptyChange.cpp  InsertEmptyChange.h  InsertMenu.hpp  InsertRemoveChange.cpp  InsertRemoveChange.h  InsertRemoveRows.hpp  InsertRow.hpp  Instrument.cpp  Instrument.h  (+122 more)
src/abstract_rational/: AbstractRational.cpp  AbstractRational.hpp  AbstractRationalEditor.cpp  AbstractRationalEditor.hpp  CMakeLists.txt
src/actions/: CMakeLists.txt  ChangeId.hpp  DeleteCells.hpp  InsertRemoveRows.hpp  InsertRow.hpp  ReplaceTable.hpp  SetCell.hpp  SetCells.hpp  SetDouble.hpp
src/cell_editors/: CMakeLists.txt  InstrumentEditor.cpp  InstrumentEditor.hpp  IntervalEditor.cpp  IntervalEditor.hpp  PercussionEditor.cpp  PercussionEditor.hpp  PercussionInstrumentEditor.hpp  ProgramEditor.hpp  RationalEditor.cpp  RationalEditor.hpp  sizes.cpp  sizes.hpp
src/cell_types/: CMakeLists.txt  Interval.hpp  PercussionInstrument.hpp  Program.hpp  Rational.hpp
src/cell_values/: CMakeLists.txt  Instrument.cpp  Instrument.hpp  Interval.cpp  Interval.hpp  Percussion.cpp  Percussion.hpp  Rational.cpp  Rational.hpp  get_instrument_pointer.cpp  instruments.cpp  instruments.hpp
src/changes/: CMakeLists.txt  CellChange.cpp  CellChange.hpp  CellChanges.cpp  CellChanges.hpp  ChangeId.hpp  ChordCellChange.cpp  ChordCellChange.hpp  ChordCellChanges.cpp  ChordCellChanges.hpp  CommandId.hpp  DoubleChange.cpp  DoubleChange.hpp  GainChange.cpp  GainChange.hpp  InsertChords.cpp  InsertChords.hpp  InsertEmptyChange.cpp  InsertEmptyChange.hpp  InsertJson.cpp  InsertJson.hpp  InsertJsonChords.cpp  InsertJsonChords.hpp  InsertJsonNotes.cpp  InsertJsonNotes.hpp  InsertNotes.cpp  InsertNotes.hpp  InsertRemoveChange.cpp  InsertRemoveChange.hpp  InsertRemoveChords.cpp  InsertRemoveChords.hpp  InsertRemoveJson.cpp  InsertRemoveJson.hpp  InsertRemoveNotes.cpp  InsertRemoveNotes.hpp  InstrumentChange.cpp  InstrumentChange.hpp  KeyChange.cpp  KeyChange.hpp  NoteCellChange.cpp  (+38 more)
src/chord/: CMakeLists.txt  Chord.cpp  Chord.hpp  ChordsModel.cpp  ChordsModel.hpp  InsertChord.cpp  InsertChord.hpp  InsertChords.cpp  InsertChords.hpp  RemoveChords.cpp  RemoveChords.hpp  SetChordBeats.cpp  SetChordBeats.hpp  SetChordInstrument.cpp  SetChordInstrument.hpp  SetChordInterval.cpp  SetChordInterval.hpp  SetChordPercussionInstrument.cpp  SetChordPercussionInstrument.hpp  SetChordPercussionSet.cpp  SetChordPercussionSet.hpp  SetChordTempoRatio.cpp  SetChordTempoRatio.hpp  SetChordVelocityRatio.cpp  SetChordVelocityRatio.hpp  SetChordWords.cpp  SetChordWords.hpp  SetChordsCells.cpp  SetChordsCells.hpp
src/column_numbers/: CMakeLists.txt  UnpitchedNoteColumn.hpp
src/commands/: CMakeLists.txt  CellChange.cpp  CellChange.h  ChangeToInterval.cpp  ChangeToInterval.hpp  ChangeToPercussion.cpp  ChangeToPercussion.hpp  InsertChange.cpp  InsertChange.h  InsertChord.cpp  InsertChord.hpp  InsertChords.cpp  InsertChords.hpp  InsertEmptyChange.cpp  InsertEmptyChange.h  InsertNewChange.cpp  InsertNewChange.h  InsertNote.cpp  InsertNote.hpp  InsertNotes.cpp  InsertNotes.hpp  InsertRemoveChange.cpp  InsertRemoveChange.h  RemoveChange.cpp  RemoveChange.h  RemoveChords.cpp  RemoveChords.hpp  RemoveNotes.cpp  RemoveNotes.hpp  SetCells.cpp  SetCells.hpp  SetChordBeats.cpp  SetChordBeats.hpp  SetChordCell.cpp  SetChordCell.hpp  SetChordInterval.cpp  SetChordInterval.hpp  SetChordTempoRatio.cpp  SetChordTempoRatio.hpp  SetChordVelocityRatio.cpp  (+40 more)
src/delegates/: ComboBoxDelegate.cpp  ComboBoxDelegate.h  InstrumentDelegate.cpp  InstrumentDelegate.h  IntervalDelegate.cpp  IntervalDelegate.h  ShowSliderDelegate.cpp  ShowSliderDelegate.h  SpinBoxDelegate.cpp  SpinBoxDelegate.h
src/editors/: CMakeLists.txt  ChordsDelegate.cpp  ChordsDelegate.hpp  ChordsView.cpp  InstrumentEditor.cpp  InstrumentEditor.h  IntervalEditor.cpp  IntervalEditor.h  RationalEditor.cpp  ShowSlider.cpp  ShowSlider.h  SongEditor.cpp  TreeSelector.cpp  TreeSelector.hpp  sizes.cpp  sizes.hpp
src/executables/: main.cpp  test.cpp
src/indices/: CMakeLists.txt  CellIndex.cpp  CellIndex.hpp  RowRange.cpp  RowRange.hpp  index_functions.cpp  index_functions.hpp
src/instrument/: CMakeLists.txt  Instrument.cpp  Instrument.hpp  InstrumentEditor.cpp  InstrumentEditor.hpp  InstrumentsModel.cpp  InstrumentsModel.hpp
src/interval/: Interval.cpp  Interval.hpp  IntervalEditor.cpp  IntervalEditor.hpp
src/items_model/: CMakeLists.txt  InsertItem.hpp  InsertItems.hpp  ItemsModel.hpp  RemoveItems.hpp  SetBeats.hpp  SetCell.hpp  SetCells.hpp  SetInstrument.hpp  SetInterval.hpp  SetPercussionInstrument.hpp  SetPercussionSet.hpp  SetTempoRatio.hpp  SetVelocityRatio.hpp  SetWords.hpp
src/iterators/: CMakeLists.txt  MostRecentIterator.hpp
src/json/: CMakeLists.txt  JsonErrorHandler.cpp  JsonErrorHandler.hpp  json.hpp  schemas.cpp  schemas.hpp
src/main/: ChordsDelegate.cpp  ChordsView.cpp  ChordsView.h  Editor.cpp  Editor.h  MyDelegate.cpp  MyDelegate.h  MyView.cpp  MyView.h  Player.cpp  Player.h  Song.cpp  Song.h  TreeNode.cpp  TreeNode.h  main.cpp
src/menus/: CMakeLists.txt  EditMenu.hpp  FileMenu.hpp  InsertMenu.hpp  PasteMenu.hpp  (+4 more)
tests/: .clang-tidy  CMakeLists.txt  Tester.cpp  Tester.h  Tester.hpp  test.cpp  test_song.json  timewise.musicxml
(+432 files in other folders)
